--- a/TicketManagement.Web/Components/Pages/Admin/UserManagement.razor
+++ b/TicketManagement.Web/Components/Pages/Admin/UserManagement.razor
@@ -8,7 +8,7 @@
 @inject NavigationManager Navigation
 @inject ILogger<UserManagement> Logger
 @inject AuthenticationStateProvider AuthenticationStateProvider
-@attribute [Authorize]
+@attribute [Authorize(Policy = "SystemAdmin")]
 
 <PageTitle>User Management - Ticket Management</PageTitle>
 
